--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -4,5 +4,7 @@
     "editor.rulers": [
         80
     ],
-    "explorer.confirmDelete": false
+    "explorer.confirmDelete": false,
+    "security.workspace.trust.emptyWindow": false,
+    "github.gitProtocol": "ssh"
 }
